アクセス解析のタグを追加

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--スタイルシート-->
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script async src="/cgi-bin/lunalys3/analyzer/tracker.js" id="lunalys" data-site="1"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -38,9 +39,7 @@
                   <a href="#works" class="header__nav-link button">
                     <span class="button__icon">
                       <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M4.2 0.635498C3.04172 0.635498 2.1 1.57078 2.1 2.72115V11.0638H4.2V2.72115H16.8V11.0638H18.9V2.72115C18.9 1.57078 17.9583 0.635498 16.8 0.635498H4.2ZM0.63 12.1066C0.282187 12.1066 0 12.3868 0 12.7323C0 14.114 1.12875 15.2351 2.52 15.2351H18.48C19.8712 15.2351 21 14.114 21 12.7323C21 12.3868 20.7178 12.1066 20.37 12.1066H0.63Z"
-                          class="button__icon-path" />
+                        <path d="M4.2 0.635498C3.04172 0.635498 2.1 1.57078 2.1 2.72115V11.0638H4.2V2.72115H16.8V11.0638H18.9V2.72115C18.9 1.57078 17.9583 0.635498 16.8 0.635498H4.2ZM0.63 12.1066C0.282187 12.1066 0 12.3868 0 12.7323C0 14.114 1.12875 15.2351 2.52 15.2351H18.48C19.8712 15.2351 21 14.114 21 12.7323C21 12.3868 20.7178 12.1066 20.37 12.1066H0.63Z" class="button__icon-path" />
                       </svg>
                     </span>
                     <span class="button__text">Works -</span>
@@ -62,12 +61,8 @@
                   <a href="#flow" class="header__nav-link button">
                     <span class="button__icon">
                       <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M8.43454 7.15642C8.7598 7.47765 8.7598 8.00275 8.43455 8.32398L3.65356 13.0459C3.13521 13.5578 2.25649 13.1906 2.25649 12.4621L2.25649 3.01832C2.25649 2.28979 3.13521 1.92261 3.65355 2.43454L8.43454 7.15642Z"
-                          class="button__icon-path" />
-                        <path
-                          d="M15.4089 7.15642C15.7342 7.47765 15.7342 8.00275 15.4089 8.32398L10.6279 13.0459C10.1096 13.5578 9.23085 13.1906 9.23085 12.4621L9.23085 3.01832C9.23085 2.28979 10.1096 1.92261 10.6279 2.43454L15.4089 7.15642Z"
-                          class="button__icon-path" />
+                        <path d="M8.43454 7.15642C8.7598 7.47765 8.7598 8.00275 8.43455 8.32398L3.65356 13.0459C3.13521 13.5578 2.25649 13.1906 2.25649 12.4621L2.25649 3.01832C2.25649 2.28979 3.13521 1.92261 3.65355 2.43454L8.43454 7.15642Z" class="button__icon-path" />
+                        <path d="M15.4089 7.15642C15.7342 7.47765 15.7342 8.00275 15.4089 8.32398L10.6279 13.0459C10.1096 13.5578 9.23085 13.1906 9.23085 12.4621L9.23085 3.01832C9.23085 2.28979 10.1096 1.92261 10.6279 2.43454L15.4089 7.15642Z" class="button__icon-path" />
                       </svg>
                     </span>
                     <span class="button__text">Work flow -</span>
@@ -77,9 +72,7 @@
                   <a href="#message" class="header__nav-link button">
                     <span class="button__icon">
                       <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M0.502817 8.41785C-0.203433 8.81822 -0.137808 9.88587 0.615317 10.1962L4.99969 12.0119V15.2179C4.99969 15.7797 5.45594 16.2328 6.02157 16.2328C6.32469 16.2328 6.61219 16.0994 6.80594 15.8666L8.74344 13.5606L12.6153 15.1621C13.2059 15.4073 13.8903 15.0224 13.9872 14.3955L15.9872 1.4843C16.0466 1.10876 15.8809 0.730116 15.5653 0.515964C15.2497 0.301812 14.8372 0.28319 14.5028 0.472513L0.502817 8.41785ZM2.13094 9.20928L12.8028 3.15406L5.94032 10.7704L5.97782 10.8014L2.13094 9.20928ZM12.6028 13.5451L7.39657 11.388L14.0872 3.96101L12.6028 13.5451Z"
-                          class="button__icon-path" />
+                        <path d="M0.502817 8.41785C-0.203433 8.81822 -0.137808 9.88587 0.615317 10.1962L4.99969 12.0119V15.2179C4.99969 15.7797 5.45594 16.2328 6.02157 16.2328C6.32469 16.2328 6.61219 16.0994 6.80594 15.8666L8.74344 13.5606L12.6153 15.1621C13.2059 15.4073 13.8903 15.0224 13.9872 14.3955L15.9872 1.4843C16.0466 1.10876 15.8809 0.730116 15.5653 0.515964C15.2497 0.301812 14.8372 0.28319 14.5028 0.472513L0.502817 8.41785ZM2.13094 9.20928L12.8028 3.15406L5.94032 10.7704L5.97782 10.8014L2.13094 9.20928ZM12.6028 13.5451L7.39657 11.388L14.0872 3.96101L12.6028 13.5451Z" class="button__icon-path" />
                       </svg>
                     </span>
                     <span class="button__text">Message -</span>
@@ -89,9 +82,7 @@
                   <a href="#contact" class="header__nav-link button button--bg">
                     <span class="button__icon">
                       <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M2.5 2.28406C2.15625 2.28406 1.875 2.56339 1.875 2.90479V3.76217L8.61328 9.25563C9.42188 9.91515 10.582 9.91515 11.3906 9.25563L18.125 3.76217V2.90479C18.125 2.56339 17.8438 2.28406 17.5 2.28406H2.5ZM1.875 6.17138V12.8365C1.875 13.1779 2.15625 13.4572 2.5 13.4572H17.5C17.8438 13.4572 18.125 13.1779 18.125 12.8365V6.17138L12.5781 10.6949C11.0781 11.917 8.91797 11.917 7.42188 10.6949L1.875 6.17138ZM0 2.90479C0 1.53531 1.12109 0.421875 2.5 0.421875H17.5C18.8789 0.421875 20 1.53531 20 2.90479V12.8365C20 14.2059 18.8789 15.3194 17.5 15.3194H2.5C1.12109 15.3194 0 14.2059 0 12.8365V2.90479Z"
-                          class="button__icon-path button__icon-path--contact" />
+                        <path d="M2.5 2.28406C2.15625 2.28406 1.875 2.56339 1.875 2.90479V3.76217L8.61328 9.25563C9.42188 9.91515 10.582 9.91515 11.3906 9.25563L18.125 3.76217V2.90479C18.125 2.56339 17.8438 2.28406 17.5 2.28406H2.5ZM1.875 6.17138V12.8365C1.875 13.1779 2.15625 13.4572 2.5 13.4572H17.5C17.8438 13.4572 18.125 13.1779 18.125 12.8365V6.17138L12.5781 10.6949C11.0781 11.917 8.91797 11.917 7.42188 10.6949L1.875 6.17138ZM0 2.90479C0 1.53531 1.12109 0.421875 2.5 0.421875H17.5C18.8789 0.421875 20 1.53531 20 2.90479V12.8365C20 14.2059 18.8789 15.3194 17.5 15.3194H2.5C1.12109 15.3194 0 14.2059 0 12.8365V2.90479Z" class="button__icon-path button__icon-path--contact" />
                       </svg>
                     </span>
                     <span class="button__text">Contact -</span>
@@ -244,9 +235,7 @@
                   <span class="section__head-main">Message -</span>
                   <span class="section__head-sub">ご依頼をお考えの方へ</span>
                 </h2>
-                <p class="message__text">
-                  静的はHTMLコーディングからWordPress化まで対応可能です。<br />デザインカンプの糸をしっかりと理解したうえで、迅速、丁寧な対応でコーディング業務をサポートいたします！
-                </p>
+                <p class="message__text">静的はHTMLコーディングからWordPress化まで対応可能です。<br />デザインカンプの糸をしっかりと理解したうえで、迅速、丁寧な対応でコーディング業務をサポートいたします！</p>
               </div>
             </div>
           </div>
@@ -260,9 +249,7 @@
             <a href="" target="_blank" class="page-bottom__button button button--border"
               ><span class="button__icon">
                 <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M2.5 2.28406C2.15625 2.28406 1.875 2.56339 1.875 2.90479V3.76217L8.61328 9.25563C9.42188 9.91515 10.582 9.91515 11.3906 9.25563L18.125 3.76217V2.90479C18.125 2.56339 17.8438 2.28406 17.5 2.28406H2.5ZM1.875 6.17138V12.8365C1.875 13.1779 2.15625 13.4572 2.5 13.4572H17.5C17.8438 13.4572 18.125 13.1779 18.125 12.8365V6.17138L12.5781 10.6949C11.0781 11.917 8.91797 11.917 7.42188 10.6949L1.875 6.17138ZM0 2.90479C0 1.53531 1.12109 0.421875 2.5 0.421875H17.5C18.8789 0.421875 20 1.53531 20 2.90479V12.8365C20 14.2059 18.8789 15.3194 17.5 15.3194H2.5C1.12109 15.3194 0 14.2059 0 12.8365V2.90479Z"
-                    class="button__icon-path" />
+                  <path d="M2.5 2.28406C2.15625 2.28406 1.875 2.56339 1.875 2.90479V3.76217L8.61328 9.25563C9.42188 9.91515 10.582 9.91515 11.3906 9.25563L18.125 3.76217V2.90479C18.125 2.56339 17.8438 2.28406 17.5 2.28406H2.5ZM1.875 6.17138V12.8365C1.875 13.1779 2.15625 13.4572 2.5 13.4572H17.5C17.8438 13.4572 18.125 13.1779 18.125 12.8365V6.17138L12.5781 10.6949C11.0781 11.917 8.91797 11.917 7.42188 10.6949L1.875 6.17138ZM0 2.90479C0 1.53531 1.12109 0.421875 2.5 0.421875H17.5C18.8789 0.421875 20 1.53531 20 2.90479V12.8365C20 14.2059 18.8789 15.3194 17.5 15.3194H2.5C1.12109 15.3194 0 14.2059 0 12.8365V2.90479Z" class="button__icon-path" />
                 </svg> </span
               ><span class="button__text">Contact -</span>
             </a>
